fix {{.Title}} and {{.Name}} has no value err

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,6 @@
 {{template "header"}}
+    <title>{{.Title}}</title>
+        <h1>{{.Name}}</h1>
         <div id="div-home">
             <p>这就是主页</p>
             <p>这就是主页</p>
