--- a/templates/regist.html
+++ b/templates/regist.html
@@ -1,4 +1,6 @@
 {{template "header"}}
+        <title>{{.Title}}</title>
+        <h1>{{.Name}}</h1>
         <div id="div-regist">
             <form action="/" method="post">
                 <label>账号</label>
